# modus-document-intel

modus-doc-intel/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
modus-doc-intel/apps/api/: pyproject.toml
modus-doc-intel/apps/api/src/modus_api/: __init__.py  config.py  main.py
modus-doc-intel/apps/api/src/modus_api/routes/: documents.py  ingestion.py  queries.py
modus-doc-intel/apps/web/: package-lock.json  package.json  tailwind.config.ts
modus-doc-intel/apps/web/src/app/: globals.css  layout.tsx  page.tsx
modus-doc-intel/apps/web/src/app/api/chat/: route.ts
modus-doc-intel/apps/web/src/app/documents/: page.tsx
modus-doc-intel/apps/web/src/app/documents/[docId]/: loading.tsx  page.tsx
modus-doc-intel/apps/web/src/components/: answer-display.tsx  contradiction-viewer.tsx  ingestion-progress.tsx  query-panel.tsx  section-tree.tsx  upload-zone.tsx
modus-doc-intel/apps/web/src/lib/: api.ts  types.ts
modus-doc-intel/docs/: AGENTS.md  ARCHITECTURE.md  CONTEXT_STRATEGY.md
modus-doc-intel/eval/: golden_questions.yaml
modus-doc-intel/infra/: Dockerfile.agents  Dockerfile.api  Dockerfile.web  docker-compose.local.yml  docker-compose.yml
modus-doc-intel/scripts/: eval.py  seed_icici.py
modus-doc-intel/services/agents/: pyproject.toml
modus-doc-intel/services/agents/src/modus_agents/: __init__.py  graph.py  llm.py  routing.py  state.py
modus-doc-intel/services/agents/src/modus_agents/nodes/: __init__.py  aggregation.py  contradiction.py  extraction.py  global_reason.py  local.py  query.py
modus-doc-intel/services/workers/: pyproject.toml
modus-doc-intel/services/workers/src/modus_workers/: __init__.py  __main__.py  groq_client.py
modus-doc-intel/services/workers/src/modus_workers/flows/: __init__.py  ingest_document.py
modus-doc-intel/services/workers/src/modus_workers/tasks/: __init__.py  duckdb_write.py  ocr.py  segment.py  summarize.py
