[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modus-agents"
version = "0.1.0"
description = "LangGraph query agents for modus-doc-intel"
requires-python = ">=3.11"
dependencies = [
    "modus-schemas",
    "modus-prompts",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "duckdb>=1.0",
    "motor>=3.4",
    "python-dotenv>=1.0",
    "langsmith>=0.1",
]

[tool.uv.sources]
modus-schemas = { workspace = true }
modus-prompts = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/modus_agents"]
