[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modus-workers"
version = "0.1.0"
description = "Ingestion pipeline workers for modus-doc-intel"
requires-python = ">=3.11"
dependencies = [
    "modus-schemas",
    "modus-prompts",
    "pdfplumber>=0.11",
    "duckdb>=1.0",
    "motor>=3.4",          # async MongoDB driver
    "httpx>=0.27",
    "tiktoken>=0.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "asyncio-throttle>=1.0",
]

[tool.uv.sources]
modus-schemas = { workspace = true }
modus-prompts = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/modus_workers"]
